crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__error_response_serialization.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "error": {
    "type": "http-error",
    "status": 400,
    "message": "Bad Request",
    "details": {
      "error": "Invalid parameter",
      "parameter": "test_param"
    }
  }
}
