crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_http_error.snap
---
source: src/error.rs
expression: serialized
---
{
  "message": "Not found",
  "status": 404,
  "type": "http-error"
}
