crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_http_request.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "network-error",
  "message": "Connection timeout",
  "category": "timeout"
}
