crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_json.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "response-parsing-error",
  "reason": "Invalid JSON"
}
