crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_multiple_suggestions.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "invalid-parameter",
      "parameter": "pet_i",
      "suggestions": [
        "petId",
        "petInfo"
      ],
      "valid_parameters": [
        "petId",
        "petInfo",
        "timeout"
      ]
    }
  ]
}
