crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_no_suggestions.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "invalid-parameter",
      "parameter": "completely_wrong",
      "suggestions": [],
      "valid_parameters": [
        "petId",
        "timeout"
      ]
    }
  ]
}
