crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_request_construction.snap
---
source: src/error.rs
expression: serialized
---
{
  "reason": "Invalid parameter location: body",
  "type": "request-construction-error"
}
