crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_serialization_with_details.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "invalid-parameter",
      "parameter": "pet_id",
      "suggestions": [
        "petId"
      ],
      "valid_parameters": [
        "petId",
        "timeout_seconds"
      ]
    }
  ]
}
