crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_serialization_with_suggestions.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "tool-not-found",
  "tool_name": "getPetByID",
  "suggestions": [
    "getPetById",
    "getPetsByStatus"
  ]
}
