crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_serialization_without_details.snap
---
source: src/error.rs
expression: serialized
---
{
  "suggestions": [],
  "tool_name": "unknownTool",
  "type": "tool-not-found"
}
