crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "missing-required-parameter",
      "parameter": "field",
      "description": "Missing required field",
      "expected_type": "string"
    }
  ]
}
