crates/rmcp-openapi/src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_const.snap
---
source: crates/rmcp-openapi/src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "type": "constraint-violation",
      "parameter": "environment",
      "message": "\"staging\" is not equal to const \"production\"",
      "field_path": "environment",
      "actual_value": "staging",
      "expected_type": "string",
      "constraints": [
        {
          "type": "const-value",
          "value": "production"
        }
      ]
    }
  ]
}
